<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="335dp"
        android:layout_height="458dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modo de Jogo:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.036" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.193">

            <RadioButton
                android:id="@+id/RB_Normal"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:text="@string/STR_Normal" />

            <RadioButton
                android:id="@+id/RB_Escondido"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:text="@string/STR_Escondido" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rondas:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.56" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

            <RadioButton
                android:id="@+id/RB_5"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:text="@string/STR_5" />

            <RadioButton
                android:id="@+id/RB_10"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:text="@string/STR_10" />

            <RadioButton
                android:id="@+id/RB_15"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:text="@string/STR_15" />
        </RadioGroup>

        <Button
            android:id="@+id/Btn_Jogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STR_Jogar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>